--- a/home.twig
+++ b/home.twig
@@ -10,7 +10,7 @@
     </div>
 </header>
 <section>
-  {{widget('feature', 'featurehome', {"header": "profile", "strapline":"profile","defaultBgImg": asset('images/feature-bg.jpg'), 'positionTopPercentage': '50','showBtn': false})|raw}}
+  {{widget('feature', 'featurehome', {"header": "profile", "strapline":"profile","defaultBgImg": asset('images/feature-bg.jpg'), 'positionTopPercentage': '50','showBtn': true})|raw}}
 </section>
 <div class="wrapper clearfix menu-sz">
   <nav class="sz-nav">
@@ -35,7 +35,7 @@
                     {{widget('image', 'people-image', { 'src': asset('images/atr.png'), 'alt': '', 'fileName': 'atr.png', 'fileSize': '3kb', 'imageSize': '427px x 99px', 'imageWidth': '427px'})|raw}}
                     {{widget('content', 'people-header', {"content":"<h2>Our people.</h2>"})|raw}}
                     {{widget('content', 'people-content', {"content":"<p>Aliquam erat ac ipsum. Integer aliquam purus. Quisque lorem tortor fringilla sed, vestibulum id, eleifend</p>"})|raw}}
-                    {{widget('button', 'people-button2', {text:'show more;', 'align':'widget-align-right'})|raw}}
+                    {{widget('button', 'people-button2', {text:'show more', 'align':'widget-align-right'})|raw}}
                 </div>
             </div>
         </div>        
@@ -50,7 +50,7 @@
     <div class="wrapper clearfix">
                 {{widget('content', 'contactformheader', {"content":"<h2>Contact us</h2>"})|raw}}
                 {{widget('content', 'contactformcontent', {"content":"<p>Aliquam erat ac ipsum. Integer aliquam purus. Quisque lorem tortor fringilla sed, vestibulum id, eleifend</p>"})|raw}}
-                {{widget('contactform', 'contactform', {'text': 'Send;','formTitle': 'Contact Form', 'email': 'profile'})|raw}}
+                {{widget('contactform', 'contactform', {'text': 'Send','formTitle': 'Contact Form', 'email': 'profile'})|raw}}
     </div>
     <div class="wrapper clearfix">
         <div class="responsivecolumns columns-four-25-25-25-25">
