--- a/stylesheet.less
+++ b/stylesheet.less
@@ -194,13 +194,12 @@ code{
 }
 
 .widget.navigation ul li {
-  float: left;
-  display: block;
+  display: inline-block;
   padding-right: 30px;
 }
 
 .widget.navigation ul li a{
-  display: block;
+  display: inline-block;
   font-family:@font-swatch6-font-family;
   font-size:@font-swatch6-font-size;
   font-weight: @font-swatch6-font-weight;
@@ -219,7 +218,6 @@ code{
    =============================== */
 
 .widget.extendednavigation {
-  float: left;
   position: relative;
   background-color: @color-swatch3;
   max-width: 100%;
@@ -230,15 +228,13 @@ code{
 }
 
 .widget.extendednavigation ul {
-  float: left;
   padding: 0;
   margin: 0;
   background-color: @color-swatch3;
 }
 
 .widget.extendednavigation ul li {
-  float: left;
-  display: block;
+  display: inline-block;
   color: @color-swatch1;
   background-color: @color-swatch3;
   line-height: 37px;
@@ -1572,8 +1568,7 @@ width: 100%;
   }
 
   .widget .extendednavigation {
-    display: block;
-    float: left;
+    display: inline-block;
     width: 100%;
   }
 
