--- a/default.twig
+++ b/default.twig
@@ -11,7 +11,7 @@
 </header>
 <div class="wrapper clearfix menu-sz">
   <nav class="sz-nav">
-    {{widget('extendednavigation', 'navigationheader', {})|raw}}
+    {{widget('extendednavigation', 'navigationheader', {"align":"left"})|raw}}
   </nav>
 </div>
 <div class="main wrapper clearfix">
