--- a/home.twig
+++ b/home.twig
@@ -14,7 +14,7 @@
 </section>
 <div class="wrapper clearfix menu-sz">
   <nav class="sz-nav">
-    {{widget('extendednavigation', 'navigationheader', {})|raw}}
+    {{widget('extendednavigation', 'navigationheader', {"align":"left"})|raw}}
   </nav>
 </div>
 <div class="main wrapper clearfix">
