--- a/stylesheet.less
+++ b/stylesheet.less
@@ -123,9 +123,9 @@ code{
 }
 
 .widget.logo {
-  display: inline-block;
+  display: table;
   margin: 0 10px;
-  float: none;
+
 }
 
 .widget.companyheader {
