--- a/stylesheet.less
+++ b/stylesheet.less
@@ -231,6 +231,8 @@ code{
   padding: 0;
   margin: 0;
   background-color: @color-swatch3;
+  width: 100%;
+  float: none;
 }
 
 .widget.extendednavigation ul li {
@@ -238,6 +240,7 @@ code{
   color: @color-swatch1;
   background-color: @color-swatch3;
   line-height: 37px;
+  float: none;
 }
 .widget.extendednavigation ul li a{
   color: @color-swatch1;
