--- a/stylesheet.less
+++ b/stylesheet.less
@@ -277,9 +277,10 @@ code{
 }
 .copy-sz{
   text-align: center;
-}
-.copy-sz{
   margin: 2em auto;
+}
+.copy-sz .widget.profile{
+  margin: 1em 0;
 }
 .copy-sz .widget.profile .bk-profile-socialicons{
   margin: 2em 0 0;
@@ -984,7 +985,7 @@ input:-moz-placeholder { color: @color-swatch7; }
 .widget.profile span {
   display: block;
   font-family: @font-swatch5-font-family;
-  font-size: @font-swatch5-font-size;
+  font-size: @font-swatch7-font-size;
   line-height: @font-swatch5-line-height;
   color: @font-swatch5-color;
 }
@@ -992,7 +993,7 @@ input:-moz-placeholder { color: @color-swatch7; }
 .bk-footer .widget.profile span {
   display: block;
   font-family: @font-swatch5-font-family;
-  font-size: @font-swatch5-font-size;
+  font-size: @font-swatch7-font-size;
   line-height: @font-swatch5-line-height;
   color: @color-swatch1;
 }
@@ -1705,6 +1706,7 @@ width: 100%;
   .widget.responsiveslideshow .slideshow-image-list {
       height: 400px;
   }
+  
 
 }
 
