--- a/stylesheet.less
+++ b/stylesheet.less
@@ -989,7 +989,11 @@ input:-moz-placeholder { color: @color-swatch7; }
   line-height: @font-swatch5-line-height;
   color: @font-swatch5-color;
 }
-
+.bk-footer .widget.content,
+.bk-footer .widget.profile{
+  padding: 0.7em 0;
+  font-size: @font-swatch7-font-size;
+}
 .bk-footer .widget.profile span {
   display: block;
   font-family: @font-swatch5-font-family;
