--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1774,13 +1774,13 @@ width: 100%;
 /* other */
 .widget.profile fieldset button.btn, .widget.signupform fieldset button.btn, .blogsearch form button{
   margin-left: 1px;
-}
+  }
 
 /* BLOCKQUOTE */
 
 blockquote {
   margin: 0;
-}
+  }
 
 /* SLIDESHOW */
 
@@ -1796,6 +1796,9 @@ blockquote {
   .widget.gallery li {
       width: 100%;
       padding-bottom: 100%;
+  }
+  .widget.logo, .widget.companyname{
+    width: 100%;
   }
 }
 
